Fixed alignment of ul

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 body {
     font-family: 'Courier New', Courier, monospace;
-    font-size: larger;
+    font-size: x-large;
     margin-left: 150px;
     margin-right: 150px;
+    background-color: black;
+    color: white;
 }
 
 h1 {
@@ -30,8 +32,11 @@ h2 {
 
 ul {
     list-style: none;
-    margin-left: 70px;
     font-weight: bold;
+}
+
+.list_align {
+    margin-left: 70px;
 }
 
 ol {
@@ -68,12 +73,6 @@ ul li::before {
     height: 300px;
     width: auto;
     margin-right: 100px;
-}
-
-body {
-    background-color: black;
-    color: white;
-    font-size: x-large;
 }
 
 a {
